<resources>
    <string name="app_name">messagePortal</string>
    <!--Testing Variables-->
    <string name="test_username">whiteboyrick@gmail.com</string>
    <string name="test_password">1234</string>
    <!-- System Values-->
    <string name="accessURL">https://www.greatbayco.com/appaccess/index.php</string>
    <string name="uploadURL">https://www.greatbayco.com/appaccess/fileupload.php</string>
    <string name="dbusername">greatbc9_enduser</string>
    <string name="dbpassword">shenzhen1982</string>
    <string name="dbname">greatbc9_education</string>
    <string name="Asian_Date_Format">yyyy-MM-dd</string>
    <string name="DEFAULT_SQL_DATETIME_FORMAT">yyyy-MM-dd HH:mm:ss</string>
        <!--System Constants-->

        <!--DUMMY STRING-->
    <string name="place_holder">Place Holder</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="program_name">Tutor Genie Provider Portal</string>
    <string name="from_label">From: %1$s</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="accept">Accept</string>
    <string name="nationality">Nationality</string>
    <string name="status_cancel">Lesson confirmed. Click to cancel</string>
    <string name="decline">Decline</string>
    <string name="edit_note">Edit Note</string>
    <string name="show_map"><u>+Show Map</u></string>
    <string name="hide_map"><u>-Hide Map</u></string>
    <string name="add_note_header"><b>Note:</b>\n%1$s</string>
    <string name="add_note_hint">Add your note here</string>
    <string name="student_comment_header">Student Comment: \n%1$s</string>
    <string name="upload_progress">Upload Progress</string>
    <string name="done">Done</string>
    <string name="month_view">View a whole month</string>
    <string name="weekly_view">View a whole week</string>
    <string name="date_view">View a single day</string>
    <string name="pending_view">Pending requests only</string>
    <string name="specific_date">Specific Date %1$s</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="student_name">Student Name: </string>
    <string name="status">Status: </string>
    <string name="view_details">View Details</string>
    <string name="hide_details">Hide Details</string>
    <string name="from_prefix">From:</string>
    <string name="to_prefix">To:</string>
    <string name="to_prefix_fill">To: %1$s</string>
    <string name="time_prefix">Time:</string>
    <string name="subject_prefix">Subject: %1$s</string>
    <string name="schedule_empty">Nothing is scheduled for your chosen %1$s.</string>


    <string name="word_date">date</string>
    <string name="word_week">week</string>
    <string name="word_month">month</string>
    <string name="word_year">year</string>
    <string name="word_delete">Delete</string>
    <string name="word_reply">Reply</string>


    <string name="share_via">Shared via:</string>
    <string name="compose_title">Compose Message</string>

    <!--Longer Messages-->
    <string name="image_exist">It appears that you already have a profile picture. Would
        you like to replace it?  If so, please remember to center your face when taking the
    picture as the it would be cropped to the largest possible square from the center</string>

    <string name="confirm_delete">Are you sure you want to delete the selected message(s)?</string>

    <string name="reply">reply</string>
    <string name="delete">delete</string>
    <string name="mark">mark</string>
    <string name="send">Send</string>
    <string name="close">Close</string>
    <string name="header_information">Header Information</string>
    <string name="enter_your_reply_here">Enter your message here</string>



    <!-- Text With Headers-->
    <string name="location_h">Location:\n %1$s</string>


    <!--Float Values-->
    <string name="golden_ratio">1.61803398875</string>
    <string name="no_message">You Have No Message</string>
    <string name="nodescription">no description</string>
    <string name="title_here">Title Here</string>
    <string name="student_email_here">Student Email Here</string>
    <string name="subject_here">Subject here</string>
    <string name="hide_profile_image">Hide Profile Image</string>
    <string name="take_picture">Take Picture</string>
    <string name="show_profile_picture">Show Profile Picture</string>


    <!--SYSTEM VALUES-->
    <string name="file_path">login.txt</string>
    <string name="register_url">https://www.tutor-genie.com/tutoraccess/register.php</string>

    <!--Other-->
    <string name="username_email">Username (Email)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="if_you_have_not_registered_please_to_go_tutor_genie_com_to_register_as_a_tutor">If you have not registered, please to go Tutor-genie.com to register as a tutor</string>
    <string name="Login_Prompt">It appears that you have already logged in as <b>%1$s</b> last
        time.  Would you like to continue as <b>%1$s</b>?</string>
    <string name="save_login_info_for_autologin">Save Login Info For Autologin</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="compose_message">Compose Message</string>
    <string name="cancelled">Cancelled or rejected</string>
    <string name="hourly_price">Hourly Price ($HKD)</string>
    <string name="share_to_phone_calendar">Share to Phone Calendar</string>
    <string name="share_to_other_apps">Share to other apps</string>
    <string name="number_zero">0</string>
    <string name="from">From</string>
    <string name="subject_dummy">Subject</string>
    <string name="body">body</string>
    <string name="utility_function_url">.com/appaccess/nonloginfunctions.php</string>
    <string name="directory">Directory</string>
    <string name="the_student_directory_is_empty">The student directory is empty</string>
    <string name="ERR_EMAIL_NOT_EXIST">This email is not registered to any student</string>
    <string name="add">Add</string>
    <string name="open_question">Would you like to login as this user?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_to_directory">Add To Directory</string>
    <string name="write_mail">Write mail</string>
    <string name="youtube_video_id">Youtube Video ID</string>

    <string-array name="tutor_education_level">
        <item>Primary</item>
        <item>Secondary</item>
        <item>Bachelors</item>
        <item>Graduate</item>
        <item>Doctorate</item>
        <item>Postdoctorate</item>
    </string-array>

    <string-array name="tutor_search_languageList">
        <item>None</item>
        <item>Afrikanns</item>
        <item>Albanian</item>
        <item>Arabic</item>
        <item>Armenian</item>
        <item>Basque</item>
        <item>Bengali</item>
        <item>Bulgarian</item>
        <item>Catalan</item>
        <item>Cambodian</item>
        <item>Chinese (Mandarin)</item>
        <item>Chinese (Cantonese)</item>
        <item>Croation</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>Dutch</item>
        <item>English</item>
        <item>Estonian</item>
        <item>Fiji</item>
        <item>Finnish</item>
        <item>French</item>
        <item>Georgian</item>
        <item>German</item>
        <item>Greek</item>
        <item>Gujarati</item>
        <item>Hebrew</item>
        <item>Hindi</item>
        <item>Hungarian</item>
        <item>Icelandic</item>
        <item>Indonesian</item>
        <item>Irish</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Javanese</item>
        <item>Korean</item>
        <item>Latin</item>
        <item>Latvian</item>
        <item>Lithuanian</item>
        <item>Macedonian</item>
        <item>Malay</item>
        <item>Malayalam</item>
        <item>Maltese</item>
        <item>Maori</item>
        <item>Marathi</item>
        <item>Mongolian</item>
        <item>Nepali</item>
        <item>Norwegian</item>
        <item>Persian</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Punjabi</item>
        <item>Quechua</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Samoan</item>
        <item>Serbian</item>
        <item>Slovak</item>
        <item>Slovenian</item>
        <item>Spanish</item>
        <item>Swahili</item>
        <item>Swedish </item>
        <item>Tamil</item>
        <item>Tatar</item>
        <item>Telugu</item>
        <item>Thai</item>
        <item>Tibetan</item>
        <item>Tonga</item>
        <item>Turkish</item>
        <item>Ukrainian</item>
        <item>Urdu</item>
        <item>Uzbek</item>
        <item>Vietnamese</item>
        <item>Welsh</item>
        <item>Xhosa</item>
    </string-array>
</resources>
