<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="150dp"
        android:maxWidth="150dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/g"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/todo"
        android:id="@+id/logo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/loginPanel"
        android:orientation="vertical"
        app:layout_constraintVertical_bias="0.1"
        android:paddingHorizontal="30dp">
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_email"
            android:autofillHints=""
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:id="@+id/password"
            android:autofillHints="" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_login_info_for_autologin"
            android:gravity="center_vertical"
            android:id="@+id/autologinCheck"
            android:layout_marginBottom="20dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/login"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="#FFFFFF"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/if_you_have_not_registered_please_to_go_tutor_genie_com_to_register_as_a_tutor"
            android:id="@+id/regText"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/register"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>