<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/calendar_badge"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:elevation="10dp"
        android:background="@drawable/border_badge"
        android:text="@string/number_zero"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_bar_height"
        app:layout_constraintTop_toTopOf="parent"
        app:tabTextAppearance="@style/tabItemText"
        app:tabTextColor="@color/white"
        app:tabPadding="0dp"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorHeight="@dimen/main_bar_height"
        app:tabIndicator="@color/SECONDARY_3T"
        app:tabIndicatorGravity="center"
        android:background="@drawable/shadowborder"
        android:backgroundTint="@color/BASE_COLOR"
        android:id="@+id/ControlTab">
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inbox"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sent"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calendarTab"
            android:text="@string/calendar"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/directory"/>
    </com.google.android.material.tabs.TabLayout>



    <androidx.viewpager.widget.ViewPager
        android:id="@+id/mainPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ControlTab"/>
</androidx.constraintlayout.widget.ConstraintLayout>