<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ImageView
        android:id="@+id/upload_image"
        android:contentDescription="@string/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="150dp"
        android:minWidth="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/PROGRESS_BAR"
            style="@style/my_progress_bar"
            android:elevation="1dp"/>
        <TextView
            android:id="@+id/progress_bar_text"
            android:elevation="2dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/upload_progress"
            android:background="#00000000"
             />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/upload_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/green_mild"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:id="@+id/cancel_btn"
            android:text="@string/cancel"/>
    </LinearLayout>

</LinearLayout>