<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">
    <LinearLayout
        android:id="@+id/compose_control_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/compose_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="?attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/compose_send_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send"
            style="?attr/buttonBarButtonStyle"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_information"
        android:id="@+id/compose_dialog_header"
        style="@style/text_extra_large_bold"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Carbon_Gray"
        android:id="@+id/dialog_reply_divider1"
        android:layout_marginTop="4dp"/>

    <EditText
        android:hint="@string/enter_your_reply_here"
        android:id="@+id/compose_dialog_text"
        style="@style/text_large"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autofillHints="Your reply"
        android:background="@drawable/blankbackground"
        android:gravity="top|start"
        android:inputType="textMultiLine|textCapSentences"
        android:maxLines="100"
        android:minLines="100"
        tools:ignore="LabelFor"
        android:scrollbars="vertical"/>
</LinearLayout>