<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/BASE_COLOR"
    android:padding="20dp">
    <TextView
        android:id="@+id/open_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Title"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/place_holder" />
    <TextView
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:id="@+id/open_question"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_question"
        style="@style/TextAppearance.AppCompat.Body1"
        android:gravity="center"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:id="@+id/open_btn_yes"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/open_btn_no"
            style="@style/Widget.AppCompat.Button.Colored"
            android:backgroundTint="@color/cPrimary5"
            android:textColor="@color/white"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:id="@+id/open_btn_no"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/open_btn_yes"
            style="@style/Widget.AppCompat.Button.Colored"
            android:backgroundTint="@color/Carbon_Gray"
            android:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>